gitops/Airplane-Detection/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airplane-detection
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
