gitops/Airplane-Detection/base/webapp-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: airplane-detection
  namespace: airplane-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airplane-detection
  template:
    metadata:
      labels:
        app: airplane-detection
        deployment: airplane-detection
    spec:
      containers:
        - name: airplane-detection
          image: 'quay.io/cmays20/airplane-detection:latest'
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: airplane-detection
  namespace: airplane-detection
spec:
  selector:
    app: airplane-detection
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airplane-detection
  namespace: airplane-detection
spec:
  to:
    kind: Service
    name: airplane-detection
  port:
    targetPort: 5000
---
